--- a/rootdir/etc/init.universal5410.rc
+++ b/rootdir/etc/init.universal5410.rc
@@ -311,6 +311,7 @@ on boot
     chmod 0660 /sys/devices/system/cpu/cpu1/cpuidle/state1/disable
     chmod 0660 /sys/devices/system/cpu/cpu2/cpuidle/state1/disable
     chmod 0660 /sys/devices/system/cpu/cpu3/cpuidle/state1/disable
+    write /sys/devices/system/cpu/cpufreq/iks-cpufreq/min_freq 250000
 
 # AMOLED Color Adjustment
     chown radio system /sys/class/power_supply/battery/temp
